--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1,105 +1,134 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7SXpaKwwGe5x"
-   },
-   "source": [
-    "# TM10007 Assignment template"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 69
-    },
-    "colab_type": "code",
-    "id": "CiDn2Sk-VWqE",
-    "outputId": "64224cd2-6054-4b04-a3f6-af8290400dfc"
-   },
-   "outputs": [],
-   "source": [
-    "# Run this to use from colab environment\n",
-    "#!pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data loading and cleaning\n",
-    "\n",
-    "Below are functions to load the dataset of your choice. After that, it is all up to you to create and evaluate a classification method. Beware, there may be missing values in these datasets. Good luck!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "-NE_fTbKGe5z"
-   },
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of samples: 855\n",
-      "The number of columns: 268\n"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7SXpaKwwGe5x"
+      },
+      "source": [
+        "# TM10007 Assignment template"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CiDn2Sk-VWqE",
+        "outputId": "b7591b16-e579-451a-eecf-8f4084f46c47"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m23.7/23.7 MB\u001b[0m \u001b[31m13.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m823.6/823.6 kB\u001b[0m \u001b[31m20.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.1/14.1 MB\u001b[0m \u001b[31m17.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[91m━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.2/731.7 MB\u001b[0m \u001b[31m997.7 kB/s\u001b[0m eta \u001b[36m0:10:00\u001b[0m\n",
+            "\u001b[?25h\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
+      "source": [
+        "# Run this to use from colab environment\n",
+        "!pip install -q --upgrade git+https://github.com/jveenland/tm10007_ml.git"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r3z5zk-0c4Lj"
+      },
+      "source": [
+        "## Data loading and cleaning\n",
+        "\n",
+        "Below are functions to load the dataset of your choice. After that, it is all up to you to create and evaluate a classification method. Beware, there may be missing values in these datasets. Good luck!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-NE_fTbKGe5z",
+        "outputId": "3d0d6796-10f5-41b9-bbcd-806debed4615"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The number of samples: 855\n",
+            "The number of columns: 268\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Data loading functions. Uncomment the one you want to use\n",
+        "#from worcgist.load_data import load_data\n",
+        "from worclipo.load_data import load_data\n",
+        "#from worcliver.load_data import load_data\n",
+        "#from ecg.load_data import load_data\n",
+        "\n",
+        "data = load_data()\n",
+        "print(f'The number of samples: {len(data.index)}')\n",
+        "print(f'The number of columns: {len(data.columns)}')\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "h68GnJ3Dc4Lk",
+        "outputId": "f3df4099-cabe-45ae-a1a4-e2aaee28d86b"
+      },
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-4-8c3bce0f7fdc>, line 3)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-8c3bce0f7fdc>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    test 2\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": [
+        "# test Anouk Branch"
+      ]
     }
-   ],
-   "source": [
-    "# Data loading functions. Uncomment the one you want to use\n",
-    "from worcgist.load_data import load_data\n",
-    "#from worclipo.load_data import load_data\n",
-    "#from worcliver.load_data import load_data\n",
-    "#from ecg.load_data import load_data\n",
-    "\n",
-    "data = load_data()\n",
-    "print(f'The number of samples: {len(data.index)}')\n",
-    "print(f'The number of columns: {len(data.columns)}')\n",
-    "\n"
-   ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "assignment.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.5"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "colab": {
-   "collapsed_sections": [],
-   "name": "assignment.ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
