updating classifier and visulation code

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "CiDn2Sk-VWqE"
       },
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "RPltM9lAmbIn"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -149,7 +149,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
         "id": "Llz2aPWlneOo",
         "outputId": "e933db71-a153-46a5-fd86-af4c6d5471eb"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +281,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +350,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
       "metadata": {
         "id": "vR4vx1oJoZBn"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,7 +431,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +462,7 @@
         },
         "outputId": "0cfda03c-0c1d-4e53-c6a1-9b9094bb570e"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
       "metadata": {
         "id": "1HlXchplsHTo"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -498,18 +498,6 @@
       "metadata": {
         "id": "NqoGUPrpTjMS"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# General variables for classifiers\n",
-        "cv = 5"
-      ],
-      "metadata": {
-        "id": "dyhJmXgJydQW"
-      },
-      "execution_count": 79,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -523,17 +511,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define cv and knn classifier\n",
+        "cv_knn = 6\n",
         "knn_model = KNeighborsClassifier()\n",
         "\n",
-        "# Define the parameter grid - WAAROM DEZE\n",
+        "# Define range for n neighbours to be max the size of one split\n",
+        "max_n_neighbors = len(X_train_fs) // cv_knn - 1\n",
+        "print(\"Max number of neighbors:\", max_n_neighbors)\n",
+        "\n",
+        "# Define the parameter grid\n",
         "param_grid_knn = {\n",
-        "    'n_neighbors': list(range(1, 60, 2)),\n",
+        "    'n_neighbors': list(range(1, max_n_neighbors, 2)),\n",
         "    'weights': ['uniform', 'distance'],\n",
         "    'p': [1, 2]  # p=1 for Manhattan distance, p=2 for Euclidean distance\n",
         "}\n",
         "\n",
         "# Create the grid search object with ROC AUC scoring\n",
-        "grid_search_knn = GridSearchCV(knn_model, param_grid_knn, cv=cv, scoring='roc_auc')\n",
+        "grid_search_knn = GridSearchCV(knn_model, param_grid_knn, cv=cv_knn, scoring='roc_auc')\n",
         "\n",
         "# Fit the grid search to the data\n",
         "grid_search_knn.fit(X_train_fs, Y_train)\n",
@@ -545,22 +539,23 @@
         "best_knn_model = grid_search_knn.best_estimator_\n",
         "print(f'Best estimator: {best_knn_model}')\n",
         "\n",
-        "# see how well model works on train and test data:\n",
-        "predictions_knn_train = best_knn_model.predict(X_train_fs)\n",
-        "print(classification_report(Y_train, predictions_knn_train))\n",
+        "# See how well model works on train data:\n",
+        "pred_knn_train = best_knn_model.predict(X_train_fs)\n",
+        "pred_proba_knn_train = best_knn_model.predict_proba(X_train_fs)[:,1]\n",
         "\n",
-        "roc_auc_knn_train = roc_auc_score(Y_train, predictions_knn_train)\n",
-        "print('ROC AUC =', roc_auc_knn_train)\n",
-        "accuracy_knn_train = accuracy_score(Y_train, predictions_knn_train)\n",
-        "print('Accuracy =', accuracy_knn_train)\n",
+        "roc_auc_knn_train = roc_auc_score(Y_train, pred_proba_knn_train)\n",
+        "print('ROC AUC train =', roc_auc_knn_train)\n",
+        "accuracy_knn_train = accuracy_score(Y_train, pred_knn_train)\n",
+        "print('Accuracy train =', accuracy_knn_train)\n",
         "\n",
-        "predictions_knn_test = best_knn_model.predict(X_test_fs)\n",
-        "print(classification_report(Y_test, predictions_knn_test))\n",
+        "# See how well model works on test data:\n",
+        "pred_knn_test = best_knn_model.predict(X_test_fs)\n",
+        "pred_proba_knn_test = best_knn_model.predict_proba(X_test_fs)[:,1]\n",
         "\n",
-        "roc_auc_knn_test = roc_auc_score(Y_test, predictions_knn_test)\n",
-        "print('ROC AUC =', roc_auc_knn_test)\n",
-        "accuracy_knn_test = accuracy_score(Y_test, predictions_knn_test)\n",
-        "print('Accuracy =', accuracy_knn_test)"
+        "roc_auc_knn_test = roc_auc_score(Y_test, pred_proba_knn_test)\n",
+        "print('ROC AUC test =', roc_auc_knn_test)\n",
+        "accuracy_knn_test = accuracy_score(Y_test, pred_knn_test)\n",
+        "print('Accuracy test =', accuracy_knn_test)"
       ],
       "metadata": {
         "id": "KSjGJIfWTmUX",
@@ -569,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,19 +610,50 @@
     {
       "cell_type": "code",
       "source": [
-        "#NB: runnen duurt lang door lijst aan n_estimators!\n",
+        "# Visualise the effect of n_estimators\n",
+        "roc_auc_scores = []\n",
         "\n",
-        "RF_model = RandomForestClassifier()\n",
+        "for k in range(1, 100):\n",
+        "    rf_model = RandomForestClassifier(n_estimators=k)\n",
+        "    rf_model.fit(X_train_fs, Y_train)\n",
         "\n",
-        "# Define the parameter grid - WAAROM DEZE\n",
+        "    pred_proba_RF_test =rf_model.predict_proba(X_test_fs)[:,1]\n",
+        "    roc_auc_RF_test = roc_auc_score(Y_test, pred_proba_RF_test)\n",
+        "    roc_auc_scores.append(roc_auc_RF_test)\n",
+        "\n",
+        "# Plot the relationship between K and testing roc auc\n",
+        "fig = plt.figure(figsize=(15,4))\n",
+        "ax = fig.add_subplot(1, 2, 1)\n",
+        "plt.plot(range(1, 100), roc_auc_scores)\n",
+        "plt.xlabel('Value of n_estimators for Random Forest Classifier')\n",
+        "plt.ylabel('ROC AUC')\n",
+        "\n",
+        "# Find the index of the (first) maximum ROC AUC score\n",
+        "max_roc_auc_index = np.argmax(roc_auc_scores)\n",
+        "\n",
+        "# Find the maximum ROC AUC score and its corresponding n_estimators\n",
+        "max_roc_auc = roc_auc_scores[max_roc_auc_index]\n",
+        "best_n_estimators_roc_auc = max_roc_auc_index + 1  # Adding 1 to convert index to n_estimators value\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Maximum ROC AUC:\", max_roc_auc, \"at n_estimators =\", best_n_estimators_roc_auc)\n",
+        "\n",
+        "# The model shows there is a lot of variety in which estimator is best\n",
+        "# But since it is best to use a more simple model (with the same results)\n",
+        "# We choose n_estimators = 15\n",
+        "\n",
+        "# Define cv and RF classifier\n",
+        "cv_RF = 7\n",
+        "RF_model = RandomForestClassifier(n_estimators=15)\n",
+        "\n",
+        "# Define the parameter grid\n",
         "param_grid_RF = {\n",
-        "    #'n_estimators': list(range(1, 100, 10)), # more estimators probably better result but also more computationally expensive!\n",
         "    'bootstrap': [True, False],\n",
         "    'min_samples_leaf': list(range(1, 7, 2))\n",
         "}\n",
         "\n",
         "# Create the grid search object with ROC AUC scoring\n",
-        "grid_search_RF = GridSearchCV(RF_model, param_grid_RF, cv=cv, scoring='roc_auc', error_score='raise')\n",
+        "grid_search_RF = GridSearchCV(RF_model, param_grid_RF, cv=cv_RF, scoring='roc_auc', error_score='raise')\n",
         "\n",
         "# Fit the grid search to the data\n",
         "grid_search_RF.fit(X_train_fs, Y_train)\n",
@@ -637,25 +663,25 @@
         "\n",
         "# Get the best estimator\n",
         "best_RF_model = grid_search_RF.best_estimator_\n",
-        "\n",
         "print(best_RF_model)\n",
         "\n",
-        "# See how well model works on train and test data:\n",
-        "predictions_RF_train = best_RF_model.predict(X_train_fs)\n",
-        "print(classification_report(Y_train, predictions_RF_train))\n",
+        "# See how well model works on train data:\n",
+        "pred_RF_train = best_RF_model.predict(X_train_fs)\n",
+        "pred_proba_RF_train = best_RF_model.predict_proba(X_train_fs)[:,1]\n",
         "\n",
-        "roc_auc_RF_train = roc_auc_score(Y_train, predictions_RF_train)\n",
-        "print('ROC AUC =', roc_auc_RF_train)\n",
-        "accuracy_RF_train = accuracy_score(Y_train, predictions_RF_train)\n",
-        "print('Accuracy =', accuracy_RF_train)\n",
+        "roc_auc_RF_train = roc_auc_score(Y_train, pred_proba_RF_train)\n",
+        "print('ROC AUC train=', roc_auc_RF_train)\n",
+        "accuracy_RF_train = accuracy_score(Y_train, pred_RF_train)\n",
+        "print('Accuracy train=', accuracy_RF_train)\n",
         "\n",
-        "predictions_RF_test = best_RF_model.predict(X_test_fs)\n",
-        "print(classification_report(Y_test, predictions_RF_test))\n",
+        "# See how well model works on test data:\n",
+        "pred_RF_test = best_RF_model.predict(X_test_fs)\n",
+        "pred_proba_RF_test = best_RF_model.predict_proba(X_test_fs)[:,1]\n",
         "\n",
-        "roc_auc_RF_test = roc_auc_score(Y_test, predictions_RF_test)\n",
-        "print('ROC AUC =', roc_auc_RF_test)\n",
-        "accuracy_RF_test = accuracy_score(Y_test, predictions_RF_test)\n",
-        "print('Accuracy =', accuracy_RF_test)"
+        "roc_auc_RF_test = roc_auc_score(Y_test, pred_proba_RF_test)\n",
+        "print('ROC AUC test=', roc_auc_RF_test)\n",
+        "accuracy_RF_test = accuracy_score(Y_test, pred_RF_test)\n",
+        "print('Accuracy test=', accuracy_RF_test)"
       ],
       "metadata": {
         "id": "KJxj9a1sT3In",
@@ -664,7 +690,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,17 +736,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define the SVM model\n",
+        "# Define cv and SVM classifier\n",
+        "cv_svm = 5\n",
         "svm_model = svm.SVC(probability=True)\n",
         "\n",
         "# Define the parameter grid for SVM\n",
         "param_grid_svm = {\n",
-        "    'C': [0.01, 0.5, 1 ],  # Regularization parameter\n",
-        "    'gamma': ['scale', 'auto']  # Kernel coefficient\n",
+        "    'C': [0.001, 0.01, 0.1, 1, 10],  # Regularization parameter\n",
+        "    'gamma': ['scale', 'auto', 0.001, 0.01, 0.1, 1],  # Kernel coefficient\n",
+        "    'kernel': ['rbf', 'linear', 'poly'] # Kernel type\n",
         "}\n",
         "\n",
         "# Create the grid search object with ROC AUC scoring\n",
-        "grid_search_svm = GridSearchCV(svm_model, param_grid_svm, cv=cv, scoring='roc_auc', error_score='raise')\n",
+        "grid_search_svm = GridSearchCV(svm_model, param_grid_svm, cv=cv_svm, scoring='roc_auc', error_score='raise')\n",
         "\n",
         "# Fit the grid search to the data\n",
         "grid_search_svm.fit(X_train_fs, Y_train)\n",
@@ -730,25 +758,25 @@
         "\n",
         "# Get the best estimator\n",
         "best_svm_model = grid_search_svm.best_estimator_\n",
-        "\n",
         "print(best_svm_model)\n",
         "\n",
-        "# See how well model works on train and test data\n",
-        "predictions_svm_train = best_svm_model.predict(X_train_fs)\n",
-        "print(classification_report(Y_train, predictions_svm_train))\n",
+        "# See how well model works on train data\n",
+        "pred_svm_train = best_svm_model.predict(X_train_fs)\n",
+        "pred_proba_svm_train = best_svm_model.decision_function(X_train_fs)\n",
         "\n",
-        "roc_auc_svm_train = roc_auc_score(Y_train, predictions_svm_train)\n",
-        "print('ROC AUC =', roc_auc_svm_train)\n",
-        "accuracy_svm_train = accuracy_score(Y_train, predictions_svm_train)\n",
-        "print('Accuracy =', accuracy_svm_train)\n",
+        "roc_auc_svm_train = roc_auc_score(Y_train, pred_proba_svm_train)\n",
+        "print('ROC AUC train=', roc_auc_svm_train)\n",
+        "accuracy_svm_train = accuracy_score(Y_train, pred_svm_train)\n",
+        "print('Accuracy train=', accuracy_svm_train)\n",
         "\n",
-        "predictions_svm_test = best_svm_model.predict(X_test_fs)\n",
-        "print(classification_report(Y_test, predictions_svm_test))\n",
+        "# See how well model works on test data\n",
+        "pred_svm_test = best_svm_model.predict(X_test_fs)\n",
+        "pred_proba_svm_test = best_svm_model.decision_function(X_test_fs)\n",
         "\n",
-        "roc_auc_svm_test = roc_auc_score(Y_test, predictions_svm_test)\n",
-        "print('ROC AUC =', roc_auc_svm_test)\n",
-        "accuracy_svm_test = accuracy_score(Y_test, predictions_svm_test)\n",
-        "print('Accuracy =', accuracy_svm_test)"
+        "roc_auc_svm_test = roc_auc_score(Y_test, pred_proba_svm_test)\n",
+        "print('ROC AUC test=', roc_auc_svm_test)\n",
+        "accuracy_svm_test = accuracy_score(Y_test, pred_svm_test)\n",
+        "print('Accuracy test=', accuracy_svm_test)"
       ],
       "metadata": {
         "id": "2AzjJ9b-UDhW",
@@ -757,7 +785,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -790,6 +818,93 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Visualisatie"
+      ],
+      "metadata": {
+        "id": "VL4gP1HNg5Tx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Receiver Operating Curve"
+      ],
+      "metadata": {
+        "id": "ZHkb7w9rhCCM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot the ROC curve of the different classifiers\n",
+        "plt.figure()\n",
+        "lw = 2\n",
+        "plt.plot([0, 1], [0, 1], lw=lw, linestyle='--')\n",
+        "plt.xlim([0.0, 1.0])\n",
+        "plt.ylim([0.0, 1.05])\n",
+        "plt.xlabel('False Positive Rate')\n",
+        "plt.ylabel('True Positive Rate')\n",
+        "plt.title('Receiver Operating Curve')\n",
+        "\n",
+        "# knn\n",
+        "fpr_knn, tpr_knn, _ = roc_curve(Y_test, pred_proba_knn_test)\n",
+        "roc_auc_knn = auc(fpr_knn, tpr_knn)\n",
+        "plt.plot(fpr_knn, tpr_knn, lw=lw, label='knn (AUC = %0.2f)' % roc_auc_knn)\n",
+        "\n",
+        "# RF\n",
+        "fpr_RF, tpr_RF, _ = roc_curve(Y_test, pred_proba_RF_test)\n",
+        "roc_auc_RF = auc(fpr_RF, tpr_RF)\n",
+        "plt.plot(fpr_RF, tpr_RF, lw=lw, label='RF (AUC = %0.2f)' % roc_auc_RF)\n",
+        "\n",
+        "# svm\n",
+        "fpr_svm, tpr_svm, _ = roc_curve(Y_test, pred_proba_svm_test)\n",
+        "roc_auc_svm = auc(fpr_svm, tpr_svm)\n",
+        "plt.plot(fpr_svm, tpr_svm, lw=lw, label='svm (AUC = %0.2f)' % roc_auc_svm)\n",
+        "\n",
+        "plt.legend(loc=\"lower right\")\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "h5u6TbRYg7qg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Learning curves"
+      ],
+      "metadata": {
+        "id": "8667zPI_hJeU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = plt.figure(figsize=(15,4))\n",
+        "\n",
+        "# knn\n",
+        "ax = fig.add_subplot(1, 3, 1)\n",
+        "plot_learning_curve(best_knn_model, 'KNN classifier', X_train_fs, Y_train, ax, ylim=(0.3, 1.03), cv=cv_knn)\n",
+        "\n",
+        "# RF\n",
+        "ax = fig.add_subplot(1, 3, 2)\n",
+        "plot_learning_curve(best_RF_model, 'RF classifier', X_train_fs, Y_train, ax, ylim=(0.3, 1.03), cv=cv_RF)\n",
+        "\n",
+        "# CVM\n",
+        "ax = fig.add_subplot(1, 3, 3)\n",
+        "plot_learning_curve(best_svm_model, 'SVM classifier', X_train_fs, Y_train, ax, ylim=(0.3, 1.03), cv=cv_svm)"
+      ],
+      "metadata": {
+        "id": "C1EjhRQOhLrp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
