Preprocessing and dimensionality reduction loucka en nynke update

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "CiDn2Sk-VWqE",
         "colab": {
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "RPltM9lAmbIn"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
         "id": "Llz2aPWlneOo",
         "outputId": "e2014bc9-2139-43d8-ef4f-7acfb7cf78b5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -261,32 +261,54 @@
       "source": [
         "# Filling missing values with correct value based on type of distribution per column\n",
         "\n",
-        "# Definieer alpha voor de significantietest BEARGUMENTEREN WAAROM DEZE TEST IN REPORT + WAARDE\n",
         "alpha = 0.05\n",
+        "normal_distributed_columns_count_train = 0\n",
+        "not_normal_distributed_columns_count_train = 0\n",
+        "nans_found_in_column_count_train = 0\n",
         "\n",
-        "# Initialiseer een teller voor normaal verdeelde kolommen\n",
-        "normal_distributed_columns_count = 0\n",
-        "not_normal_distributed_columns_count = 0\n",
-        "nans_found_in_column_count = 0\n",
         "\n",
-        "# Loop door elke kolom in de DataFrame en voer Shapiro-Wilk test uit\n",
+        "# Checking and filling missing for train\n",
         "for column in X_train:\n",
-        "    stat, p = shapiro(X_train[column])\n",
-        "    if p > alpha:\n",
-        "        # print(column)\n",
-        "        normal_distributed_columns_count += 1  # Tel kolom als normaal verdeeld\n",
-        "        if X_train[column].isna().sum() > 0:\n",
-        "            X_train[column].fillna(X_train[column].mean)\n",
-        "            nans_found_in_column_count += 1\n",
-        "    else:\n",
-        "        not_normal_distributed_columns_count += 1  # Tel kolom als normaal verdeeld\n",
-        "        if X_train[column].isna().sum() > 0:\n",
-        "            X_train[column].fillna(X_train[column].median)\n",
-        "            nans_found_in_column_count += 1\n",
+        "    if X_train[column].min() != X_train[column].max():\n",
+        "        stat, p = shapiro(X_train[column].dropna())\n",
+        "        if p > alpha:\n",
+        "            normal_distributed_columns_count_train += 1\n",
+        "            if X_train[column].isna().sum() > 0:\n",
+        "                X_train[column].fillna(X_train[column].mean(), inplace=True)\n",
+        "                nans_found_in_column_count_train += 1\n",
+        "        else:\n",
+        "            not_normal_distributed_columns_count_train += 1\n",
+        "            if X_train[column].isna().sum() > 0:\n",
+        "                X_train[column].fillna(X_train[column].median(), inplace=True)\n",
+        "                nans_found_in_column_count_train += 1\n",
         "\n",
-        "print(f'The number of normal distributed columns is: {normal_distributed_columns_count}')\n",
-        "print(f'The number of not normal distributed columns is: {not_normal_distributed_columns_count}')\n",
-        "print(f'The number of columns where nans were filled: {nans_found_in_column_count}')"
+        "print(f'The number of normal distributed columns in train set is : {normal_distributed_columns_count_train}')\n",
+        "print(f'The number of not normal distributed columns in train set is: {not_normal_distributed_columns_count_train}')\n",
+        "print(f'The number of columns in train set where nans were filled: {nans_found_in_column_count_train}')\n",
+        "print()\n",
+        "\n",
+        "# Checking and filling missing for test set\n",
+        "normal_distributed_columns_count_test = 0\n",
+        "not_normal_distributed_columns_count_test = 0\n",
+        "nans_found_in_column_count_test = 0\n",
+        "\n",
+        "for column in X_test:\n",
+        "    if X_test[column].min() != X_test[column].max():\n",
+        "        stat, p = shapiro(X_test[column].dropna())\n",
+        "        if p > alpha:\n",
+        "            normal_distributed_columns_count_test += 1\n",
+        "            if X_test[column].isna().sum() > 0:\n",
+        "                X_test[column].fillna(X_train[column].mean(), inplace=True)\n",
+        "                nans_found_in_column_count_test += 1\n",
+        "        else:\n",
+        "            not_normal_distributed_columns_count_test += 1\n",
+        "            if X_test[column].isna().sum() > 0:\n",
+        "                X_test[column].fillna(X_train[column].median(), inplace=True)\n",
+        "                nans_found_in_column_count_test += 1\n",
+        "\n",
+        "print(f'The number of normal distributed columns in test set is : {normal_distributed_columns_count_test}')\n",
+        "print(f'The number of not normal distributed columns in test set is: {not_normal_distributed_columns_count_test}')\n",
+        "print(f'The number of columns in test set where nans were filled: {nans_found_in_column_count_test}')"
       ],
       "metadata": {
         "id": "CpaHZZda6SE1",
@@ -295,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,24 +360,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define counter for columns with many outliers\n",
-        "columns_with_many_outliers_count = 0\n",
+        "# Calculating prescence and number of outliers\n",
+        "columns_many_outliers_count = 0\n",
         "\n",
         "for column in X_train:\n",
         "    Q1 = X_train[column].quantile(0.25)\n",
         "    Q3 = X_train[column].quantile(0.75)\n",
         "    IQR = Q3 - Q1\n",
         "\n",
-        "    # Calculate number of outliers\n",
         "    outliers = X_train[(X_train[column] < (Q1 - 1.5 * IQR)) | (X_train[column] > (Q3 + 1.5 * IQR))]\n",
         "    outliers_count = outliers.shape[0]\n",
         "\n",
-        "    # Define what 'many' outliers mean\n",
         "    if outliers_count > 0.05 * X_train.shape[0]:\n",
-        "        columns_with_many_outliers_count += 1\n",
-        "        # print(f\"{column} has many outliers: {outliers_count} outliers\")\n",
+        "        columns_many_outliers_count += 1\n",
         "\n",
-        "print(f\"Number of columns with many outliers: {columns_with_many_outliers_count}/{len(X_train.columns)}\")\n"
+        "perc_columns_many_outliers = (columns_many_outliers_count / len(X_train.columns))*100\n",
+        "print(f\"Number of columns with many outliers: {columns_many_outliers_count}/{len(X_train.columns)} = {perc_columns_many_outliers:.2f}%\")"
       ],
       "metadata": {
         "id": "L5ePShRwmJrY",
@@ -364,7 +384,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,13 +407,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Initialize a RobustScaler object\n",
         "scaler = RobustScaler()\n",
+        "scaler.fit(X_train) # Fit scaler on training set\n",
         "\n",
-        "# Fit the scaler on the training data\n",
-        "scaler.fit(X_train)\n",
-        "\n",
-        "# Transform both training and testing data using the scaler\n",
+        "# Transform train and test set using scaler\n",
         "X_train_sc = (scaler.transform(X_train))\n",
         "X_test_sc = scaler.transform(X_test)\n",
         "\n",
@@ -403,7 +420,7 @@
       "metadata": {
         "id": "vR4vx1oJoZBn"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +444,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Zero variance\n",
+        "# Determining features with zero variance and removing these\n",
         "selector = VarianceThreshold(threshold=0)\n",
         "vs_fit = selector.fit(X_train_sc)\n",
         "\n",
@@ -445,7 +462,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,14 +477,58 @@
     {
       "cell_type": "code",
       "source": [
-        "# Feature selection using K best - chi squared test\n",
-        "fs_chi = SelectKBest(f_classif, k=5).fit(X_train_zv, Y_train)\n",
+        "# Evaluating performance of selectkbest feature selection on data set\n",
         "\n",
-        "X_train_fs = fs_chi.transform(X_train_zv)\n",
-        "X_test_fs = fs_chi.transform(X_test_zv)\n",
+        "kf = StratifiedKFold(n_splits=10)\n",
+        "k_values = range(1, 11)\n",
+        "average_accuracies = []\n",
+        "std_accuracies = []\n",
         "\n",
-        "print(X_train_fs.shape)\n",
-        "print(X_test_fs.shape)\n"
+        "for k in k_values:\n",
+        "\n",
+        "    # Select K-best features\n",
+        "    selector = SelectKBest(f_classif, k=k)\n",
+        "    X_train_select = selector.fit_transform(X_train_zv, Y_train)\n",
+        "    accuracies = []\n",
+        "\n",
+        "    # 10-fold cross-validation\n",
+        "    for train_index, test_index in kf.split(X_train_select, Y_train):\n",
+        "\n",
+        "        X_fold_train, X_fold_test = X_train_select[train_index], X_train_select[test_index]\n",
+        "        y_fold_train, y_fold_test = Y_train.iloc[train_index], Y_train.iloc[test_index]\n",
+        "\n",
+        "        # Train kNN-model\n",
+        "        knn_model = KNeighborsClassifier()\n",
+        "        knn_model.fit(X_fold_train, y_fold_train)\n",
+        "\n",
+        "        # Predict and evaluate accuracy\n",
+        "        predictions = knn_model.predict(X_fold_test)\n",
+        "        accuracy = accuracy_score(y_fold_test, predictions)\n",
+        "        accuracies.append(accuracy)\n",
+        "\n",
+        "    # Calculating average accuracy for current k-number\n",
+        "    average_accuracy = np.mean(accuracies)\n",
+        "    average_accuracies.append(average_accuracy)\n",
+        "\n",
+        "    # Calculating standard deviation accuracy for current k-number\n",
+        "    std_accuracy = np.std(accuracies)\n",
+        "    std_accuracies.append(std_accuracy)\n",
+        "\n",
+        "    print(f\"For k={k} average accuracy is {average_accuracy:.3f} and standard deviation is {std_accuracy:.3f}\")\n",
+        "\n",
+        "upper_bound = np.array(average_accuracies) + np.array(std_accuracies)\n",
+        "lower_bound = np.array(average_accuracies) - np.array(std_accuracies)\n",
+        "\n",
+        "plt.figure(figsize=(10,6))\n",
+        "plt.plot(list(k_values), average_accuracies, marker='o', linestyle='-', color='blue', label='Average accuracy')\n",
+        "plt.fill_between(list(k_values), upper_bound, lower_bound, label='Standard deviation of accuracy')\n",
+        "plt.title('Average accuracy vs no. of K-features for K-Best')\n",
+        "plt.xlabel('No. of features')\n",
+        "plt.ylabel('Average accuracy')\n",
+        "plt.grid(True)\n",
+        "plt.xticks(list(k_values))\n",
+        "plt.legend()\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "pY2smu5SH9NH",
@@ -476,7 +537,7 @@
         },
         "outputId": "c5ce636c-8220-474f-aedc-53c8f5369057"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,17 +552,97 @@
     {
       "cell_type": "code",
       "source": [
-        "# # PCA\n",
-        "# # If there are more samples than features left after RFECV then perform PCA\n",
-        "# pca = decomposition.PCA(n_components=0.95)\n",
-        "# pca.fit(X_train_zv)\n",
-        "# X_train_fs = pca.transform(X_train_zv)\n",
-        "# X_test_fs = pca.transform(X_test_zv)"
+        "# Evaluating performance of PCA on dataset\n",
+        "\n",
+        "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
+        "components = range(1, 11)\n",
+        "average_accuracies = []\n",
+        "std_accuracies = []\n",
+        "plot_proberen = []\n",
+        "\n",
+        "for n_components in components:\n",
+        "    pca = PCA(n_components=n_components)\n",
+        "    X_train_pca = pca.fit_transform(X_train_zv)\n",
+        "    variance = pca.explained_variance_ratio_\n",
+        "\n",
+        "    if n_components == 2:\n",
+        "        plot_proberen.append(X_train_pca)\n",
+        "\n",
+        "    accuracies = []\n",
+        "\n",
+        "    for train_index, test_index in skf.split(X_train_pca, Y_train):\n",
+        "        X_fold_train, X_fold_test = X_train_pca[train_index], X_train_pca[test_index]\n",
+        "        y_fold_train, y_fold_test = Y_train.iloc[train_index], Y_train.iloc[test_index]\n",
+        "\n",
+        "        knn_model = KNeighborsClassifier()\n",
+        "        knn_model.fit(X_fold_train, y_fold_train)\n",
+        "\n",
+        "        predictions = knn_model.predict(X_fold_test)\n",
+        "        accuracy = accuracy_score(y_fold_test, predictions)\n",
+        "        accuracies.append(accuracy)\n",
+        "\n",
+        "    average_accuracy = np.mean(accuracies)\n",
+        "    average_accuracies.append(average_accuracy)\n",
+        "    std_dev = np.std(accuracies)\n",
+        "    std_accuracies.append(std_dev)\n",
+        "\n",
+        "    print(f\"n-components = {n_components}, average accuracy = {average_accuracy:.3f} with std dev = {std_dev:.3f}\")\n",
+        "\n",
+        "print(f'Explained variance for the first element {variance[0]}')\n",
+        "\n",
+        "upper_bound = np.array(average_accuracies) + np.array(std_accuracies)\n",
+        "lower_bound = np.array(average_accuracies) - np.array(std_accuracies)\n",
+        "\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.plot(list(components), average_accuracies, marker='o', linestyle='-', color='blue', label='Average accuracy')\n",
+        "plt.fill_between(list(components), upper_bound, lower_bound, label='Standard deviation')\n",
+        "plt.title('Average accuracy vs no. of components for PCA')\n",
+        "plt.xlabel('No. of components')\n",
+        "plt.ylabel('Average accuracy')\n",
+        "plt.grid(True)\n",
+        "plt.xticks(list(components))\n",
+        "plt.legend()\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "1HlXchplsHTo"
       },
-      "execution_count": 14,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Applying dimensionality reduction technique with best performance on dataset\n",
+        "print(X_train_zv.shape)\n",
+        "print(X_test_zv.shape)\n",
+        "\n",
+        "selector_fs = SelectKBest(f_classif, k=2) #dit veranderen ahv plot\n",
+        "\n",
+        "fitted_kbest = selector_fs.fit(X_train_zv, Y_train)\n",
+        "\n",
+        "X_train_fs = fitted_kbest.transform(X_train_zv)\n",
+        "X_test_fs = fitted_kbest.transform(X_test_zv)\n",
+        "\n",
+        "print(X_train_fs.shape)\n",
+        "print(X_test_fs.shape)\n",
+        "\n",
+        "feature1 = X_train_fs[:, 0]\n",
+        "feature2 = X_train_fs[:, 1]\n",
+        "\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.scatter(feature1, feature2, c=Y_train, cmap='viridis', alpha=0.7)\n",
+        "plt.colorbar(label='Target')\n",
+        "plt.xlabel('Feature 1')\n",
+        "plt.ylabel('Feature 2')\n",
+        "plt.title('Scatter Plot of Selected Features')\n",
+        "plt.grid(True)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "faErTr4ro3BA"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +694,7 @@
       "metadata": {
         "id": "RKn4Kt6zjDjV"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -621,7 +762,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -731,7 +872,7 @@
           "height": 510
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +960,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +1033,7 @@
         "id": "h5u6TbRYg7qg",
         "outputId": "29ccde81-9a80-412b-d93a-dd863420bd29"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -940,7 +1081,7 @@
         "id": "C1EjhRQOhLrp",
         "outputId": "6395bb33-cf96-4624-976c-0a1555c2cdde"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
